[package]
name = "tower-grid"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.20.0"
bevy_atmosphere = "0.7.0"
bevy_dolly = "0.0.1"
bevy_egui = "0.22.0"
bevy_hanabi = "0.7.0"
bevy_rapier3d = "0.22.0"
big-brain = "0.18.0"
dolly = "0.4.2"
egui = "0.23.0"
egui_dock = "0.8.1"
heck = "0.4.1"
itertools = "0.11.0"
leafwing-input-manager = { version = "0.10.0", features = ["egui"] }
rand = "0.8.5"
ron = "0.8.1"
serde = "1.0.185"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking"]
